--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section id="spotlight" class="section spotlight">
         <div class="spotlight-carousel">
             <div class="card">
-                <img src="student.png" alt="Student 1">
+                <img src="kiswa white .png" alt="Student 1">
                 <h3>Student 1</h3>
                 <p>Achievement description.</p>
             </div>
